--- a/General Analysis/General Analysis.tex
+++ b/General Analysis/General Analysis.tex
@@ -165,6 +165,7 @@ It is straightforward to check  $(\text{a})\implies (\text{b})\implies (\text{c}
 \begin{mdframed}
 Now, one may wonder: Why isn't "For all $A\subseteq X,f(A^\circ )\subseteq $
 \end{mdframed}
+\section{Equivalent Definition of Subspace and Product}
 \begin{mdframed}
 Now, given a subset $Y\subseteq X$, we define the \textbf{subspace topology} $\mathscr{T }_Y$ on $Y$ by $\mathscr{T}_Y\triangleq \set{O\cap Y:O\in \mathscr{T }}$. Immediately, one can check the well-behavior of our definitions for subspace topology: A set $E\subseteq Y$ open in $X$ remains open in $(Y,\mathscr{T }_Y)$.
 \end{mdframed}
@@ -191,6 +192,40 @@ Check straightforward.
 \begin{proof}
 From (a) to  (b), one find $B'$ by noting  $B \in \mathscr{T}'$ and utilizing the definition of basis. From (b) to (a), one show $O\in \mathscr{T }$ belongs to $\mathscr{T }'$ by taking $O=\bigcup_{x\in O} B'_x$.
 \end{proof}
+\section{Equivalent Definition of Compactness and Connectedness}
+\begin{mdframed}
+Closed subset of compact space is compact. 
+\end{mdframed}
+\begin{theorem}
+\textbf{(Equivalent Definition of Compactness)}
+\end{theorem}
+\begin{theorem}
+\label{Compact Subspace of Hausdorff Space is Closed}
+\textbf{(Compact Subspace of Hausdorff Space is Closed)} If $E$ is a compact subspace of Hausdorff space $X$, then $E$ is closed in  $X$. 
+\end{theorem}
+\begin{proof}
+Fix $x \in E^c$. Because $X$ is Hausdorff, we can associate each $y \in E$ an open set $U_y$ containing $y$ and an open set  $U_{x,y}$ containing $x$ such that  $U_y,U_{x,y}$ are disjoint. Now, because $E$ is compact and $(U_y)$ is an open cover of $E$, we know there exists a finite sub-cover 
+\begin{align*}
+E\subseteq \bigcup_{n=1}^N U_{y_n} 
+\end{align*}
+It then follows that open $\bigcap_{n=1}^n U_{x,y_n}$ contain $x$ and disjoint with $E$. 
+\end{proof}
+\begin{corollary}
+\textbf{(Homeomorphism between Compact Space and Hausdorff Space)} Suppose 
+\begin{enumerate}[label=(\alph*)]
+  \item $X$ is compact.  
+  \item $Y$ is Hausdorff.  
+  \item $f:X\rightarrow Y$ is a continuous bijective function. 
+\end{enumerate}
+Then 
+\begin{align*}
+f\text{ is a homeomorphism between }X\text{ and }Y
+\end{align*}
+\end{corollary}
+\begin{proof}
+Because closed subset of compact set is compact and continuous function send compact set to compact set, we see for each closed $E\subseteq X$, $f(E)\subseteq Y$ is compact. The result then follows from \customref{Compact Subspace of Hausdorff Space is Closed}{$f(E)\subseteq Y$ being closed since $Y$ is Hausdorff}. 
+\end{proof}
+
 \section{Quotient Topology and Topological Group}
 \begin{abstract}
   This section introduce quotient topology and topological space; and prove that \customref{Quotient Group of Topological Group}{quotient group of a topological group when equipped with the quotient topology is again a topological group}.  
@@ -3399,216 +3434,6 @@ Note that fact (b) can be checked straightforwardly.
 \begin{abstract}
 
 \end{abstract}
-\section{Product, Quotient and Chain Rule}
-\begin{mdframed}
-This section concern mostly the computation of actual value of the derivative and integral of function. With this in mind, we first prove the product and quotient rules for derivative of $\R$ to  $\R$ functions taught in most Calculus 1 classes. The proofs for the laws are easy, as it require no ingenious idea but ability to manipulate the limit symbol. However, without philosophical comments, we left an graph for geometric intuition for product rule. There are also graphs for geometric intuition for quotient rule on Internet, but we won't put it here as it require more than subtle work to understand the graph.    
-\includegraphics[height=7cm,width=10cm]{product rule.png}
-\end{mdframed}
-\label{11}
-\begin{theorem}
-\textbf{(Product Rule and Quotient Rule for Real to Real Function)} Suppose $f$ and $g$ is differentiable at  $x$, and $g'(x)\neq 0$. We have 
-\label{3}
-\begin{enumerate}[label=(\alph*)]
-  \item $(fg)'(x)=f'(x)g(x)+f(x)g'(x)$ (Product Rule)
-  \item $(\frac{f}{g})'(x)=\frac{f'(x)g(x)-f(x)g'(x)}{\big(g(x) \big)^2}$ (Quotient Rule)
-\end{enumerate}
-\end{theorem}
-\begin{proof}
-Compute 
-\begin{align*}
-  (fg)'(x)&=\lim_{h\to_0} \frac{f(x+h)g(x+h)-f(x)g(x)}{h}\\
-          &=\lim_{h\to 0} \frac{f(x+h)g(x+h)-f(x)g(x+h)+f(x)g(x+h)-f(x)g(x)}{h}\\
-          &=\lim_{h\to0} \big(g(x+h) \big) \frac{f(x+h)-f(x)}{h} + \big(f(x) \big) \frac{g(x+h)-g(x)}{h}\\
-          &=g(x)f'(x)+f(x)g'(x)
-\end{align*}
-Compute 
-\begin{align*}
-  (\frac{f}{g})'(x)&=\lim_{h\to0} \frac{\frac{f(x+h)}{g(x+h)}-\frac{f(x)}{g(x)}}{h}\\
-  &=\lim_{h\to0} \frac{f(x+h)g(x)-f(x)g(x+h)}{h g(x+h)g(x)}\\
-  &=\lim_{h\to0}\big(\frac{1}{g(x+h)g(x)} \big)\cdot \big(\frac{f(x+h)g(x)-f(x)g(x)+f(x)g(x)-f(x)g(x+h)}{h} \big)\\
-  &=\lim_{h\to 0} \Big(\frac{1}{g(x+h)g(x)} \Big) \cdot \Big(\big(g(x) \big) \frac{f(x+h)-f(x)}{h} +\big(f(x) \big) \frac{g(x)-g(x+h)}{h}\Big)\\
-  &=\Big(\frac{1}{\big(g(x) \big)^2} \Big)\cdot \Big(\big(g(x)f'(x) \big)-f(x)g'(x) \Big)=\frac{f'(x)g(x)-f(x)g'(x)}{\big(g(x) \big)^2}
-\end{align*}
-\end{proof}
-\begin{mdframed}
-  Even a year has past, I can still remember what happened in the first class of Vector Analysis last year. The professor asked: "What is derivative?". A lot of answers emerge, from extremely formal and abstract like $\lim_{h\to 0}\frac{f(x+h)-f(x)}{h}$ to those following geometric intuition like tangent line. Everyone gave a correct answer, but none of them philosophically satisfy the requirement of the question from the professor. Then, he stated: "Derivative is exactly linear approximation", and stated on black board the most general definition:
-
-
-\end{mdframed}
-\begin{definition}
-\label{4}
-  \textbf{(Definition of Differential)} Given two normed space $V,W$ and an open subset $U\subseteq V$,  we say a function $f:U\rightarrow W$ is \textbf{differentiable at $x$} if there exists a bounded linear operator $A:V\rightarrow W$ such that 
-\begin{align*}
-\lim_{ h\to 0} \frac{\norm{f(x+h)-f(x)-A(h)}_W}{\norm{h}_V}=0
-\end{align*}
-and we say the bounded linear map $A$ is the \textbf{(total) derivative} of $f$ at  $x$. 
-\end{definition}
-\begin{mdframed}
-If one put the key words "proof for chain rule" in Google search box, just like the situation in my classes, lots of rigorous proof emerge, but none of them is philosophical satisfying. For this reason, I shall give a proof of chain rule for real to real function based on the concept of linear approximation.\\
-
-In Baby Rudin, derivative of a real to real function $f$ is defined by 
-\begin{align*}
-f'(a)=\lim_{h\to 0}\frac{f(a+h)-f(a)}{h}
-\end{align*}
-Immediately from this definition, we can derive a linear approximation $P$ of $f$ at $a$ by setting 
-\begin{align*}
-P(x)=f(a)+f'(a)(x-a)
-\end{align*}
-Then, we see if we set $R(x)=f(x)-P(x)$ as the error (or the remainder) of the approximation, then trivially we have the behavior
-\begin{align*}
-R(x)\to 0\text{ as $x\to a$ }
-\end{align*}
-what behavior of $R(x)$ that give $P$ the name approximation is 
-\begin{align*}
-\frac{R(x)}{x-a}\to 0\text{ as }x\to a
-\end{align*}
-The difference between the two behaviors is symbolically apparent, yet without geometric help, it may be difficult to precisely describe how insignificant the first behavior is compared to the second behavior. For this, observe that any function $g$ that converge to  $f(a)$ at $a$ satisfy the first behavior, yet only a few satisfy the second. One can easily verify that the only linear $\R$ to  $\R$ function that satisfy the second behavior is  $P(x)=f(a)+f'(a)(x-a)$. Geometrically, this means that $R(x)=o(f'(x)dx)$ as $x \to a$.
-\label{12}
-\end{mdframed}
-\begin{theorem}
-\textbf{(Chain Rule for $\R$ to $\R$ function)} Suppose $g$ is differentiable at  $a$ and  $f$ is differentiable at  $g(a)$. We have 
-\begin{align*}
-  (f\circ g)'(a)=f'(g(a))g'(a)
-\end{align*}
-\end{theorem}
-\begin{proof}
-Define the remainders $R_{f(g(a))}(x)$ and $R_{g(a)}(x)$ by 
-\begin{align*}
-\begin{cases}
-R_{f(g(a))}(x)=f(x)-f(g(a))-f'(g(a))(x-g(a))\\
-R_{g(a)}(x)=g(x)-g(a)-g'(a)(x-a)
-\end{cases}
-\end{align*}
-Compute 
-\begin{align}
-\label{3.13}
-  (f\circ g)'(a)&=\lim_{ x\to a}\frac{f(g(x))-f(g(a))}{x-a}\\
-  &=\lim_{x\to a}\frac{R_{f(g(a))}(g(x))+f'(g(a))(g(x)-g(a))}{x-a}
-\end{align}
-Notice that because $x \to a \implies g(x)\to g(a)$, we have 
-\begin{align}
-\label{3.12}
-\lim_{x\to a} \frac{R_{f(g(a))}(g(x))}{x-a}=\lim_{ x\to a} \frac{R_{f(g(a))}(g(x))}{g(x)-g(a)}\cdot \frac{g(x)-g(a)}{x-a}=0\cdot g'(x)=0
-\end{align}
-Notice that the above deduction (\myref{Equation}{3.12}) is quite informal for two reasons: First, it may happen that $g(x)=g(a)$ locally. Second, for some reader it may require a mini proof to verify that $\frac{R_{f(g(a))}(g(x))}{g(x)-g(a)}\to 0$ as $x\to a$. These two obstacles for advanced readers should be insignificant.\\
-
-Getting back to \myref{Equation}{3.13}, by \myref{Equation}{3.12}, we now see 
-\begin{align*}
-  (f\circ g)'(a)=\lim_{x\to a}\frac{f'(g(a))(g(x)-g(a))}{x-a}=f'(g(a))g'(a)
-\end{align*}
-which finish the proof.
-\end{proof}
-\begin{theorem}
-\textbf{(First Mean Value Theorem for Definite Integral)} Given a function $f:[a,b]\rightarrow \R$ such that 
-\begin{enumerate}[label=(\alph*)]
-  \item $f$ is continuous on $(a,b)$
-\end{enumerate}
-There exists $\xi \in (a,b)$ such that 
-\begin{align*}
-\int_a^b f(x)dx = f(\xi)\cdot (b-a)
-\end{align*}
-\end{theorem}
-\begin{proof}
-We wish 
-\begin{align*}
-\vi{\text{ to find  }\xi \in (a,b)\text{ such that }f(\xi)=\frac{\int_a^b f(x)dx}{b-a}}
-\end{align*}
-Define $\tilde{f}:[a,b]\rightarrow \R$ on $[a,b]$ by 
-\begin{align}
-\label{M1}
-\tilde{f}(x)=\begin{cases}
-  f(x)& \text{ if $x \in (a,b)$ }\\
-  \lim_{t\to a}f(t)& \text{ if $x=a$ }\\
-  \lim_{t\to b}f(t)& \text{ if $x=b$ }
-\end{cases}
-\end{align}
-Then, because $\int_a^b f(x)dx=\int_a^b \tilde{f}(x)dx $, we reduce our problem into  
-\begin{align*}
-\vi{\text{ finding $\xi\in(a,b)$ such that $\tilde{f} (\xi)= \frac{\int_a^b \tilde{f}(x)dx }{b-a}$ }}
-\end{align*}
-Because $\tilde{f} $ is continuous on $[a,b]$ by definition \myref{Equation}{M1}, by EVT, we know we there exists $\alpha,\beta  \in [a,b]$ such that 
-\begin{align}
-\label{M4}
-\tilde{f} (\alpha )=\inf_{x \in [a,b]}\tilde{f}(x)\text{ and } \tilde{f}(\beta ) =\sup_{x \in[a,b]}\tilde{f}(x) 
-\end{align}
-WOLG, suppose $\alpha \leq \beta $. Deduce 
-\begin{align*}
-\tilde{f}(\alpha )= \inf_{x \in [a,b]}\tilde{f}(x)\leq \frac{\int_a^b \tilde{f}(x)dx }{b-a} \leq \sup_{x \in [a,b]}\tilde{f}(x) =\tilde{f}(\beta ) 
-\end{align*}
-by IVT, we then know there exists $\xi\in [\alpha ,\beta ]$ such that 
-\begin{align}
-\label{M3}
-\exists \xi\in [\alpha ,\beta ], \tilde{f}(\xi)=\frac{\int_a^b \tilde{f}(x)dx }{b-a} 
-\end{align}
-If $a<\alpha $ and $\beta <b$, our proof is done.\\
-
-
-If not, notice that if $\tilde{f}(\alpha )=\tilde{f}(\beta )$, then by definition of $\alpha ,\beta $ (\myref{Equation}{M4}), the proof is trivial since $\tilde{f}$ is a constant, so we only have to consider when $\tilde{f}(\alpha )<\tilde{f}(\beta )  $, and we wish to show
-\begin{align*}
-\vi{\xi \text{ can not happen at $a$ nor $b$ }}
-\end{align*}
-\As{$\xi=a $, WOLG}. Because $\xi \in [\alpha ,\beta ]$, we know $\alpha =a$. Because $\tilde{f}(\beta )>\tilde{f}(\alpha )  $, we can find $\delta $ such that 
-\begin{align}
-\label{M5}
-\inf_{x \in [\beta  -\delta, \beta  ]}\tilde{f}(x)\geq \frac{\tilde{f}(\alpha )+2\tilde{f}(\beta )  }{3}
-\end{align}
-We then from \myref{Equation}{M3} see that 
-\begin{align}
-\label{M6}
-\int_a^b \tilde{f}(x)dx=\tilde{f}(\xi)(b-a)=\tilde{f}(\alpha ) (b-a)
-\end{align}
-Also, we see from definition of $\alpha $ (\myref{Equation}{M4}) and \myref{Equation}{M5} that 
-\begin{align}
-\int_a^b \tilde{f}(x)dx&=\int_a^{\beta -\delta} \tilde{f}(x)dx + \int_{\beta -\delta}^{\beta  } \tilde{f}(x)dx+\int_{\beta }^{b}\tilde{f}(x)dx \\
-&\geq (b -\delta -a) \tilde{f}(\alpha ) + \delta \cdot  \big( \frac{\tilde{f}(\alpha )+2\tilde{f}(\beta )  }{3}\big)\\
-&> (b -\delta -a) \tilde{f}(\alpha ) + \delta \cdot  \big( \frac{\tilde{f}(\alpha )+\tilde{f}(\beta )  }{2}\big)\\
-&=\tilde{f}(\alpha ) \big(b-a-\frac{\delta}{2} \big) + \tilde{f}(\beta ) \cdot \big( \frac{\delta}{2}\big)
- \label{M7}
-\end{align}
-Now, from \myref{Equation}{M6} and \myref{Equation}{M7}, we can deduce  
-\begin{align*}
-\tilde{f}(\alpha )(b-a)> \tilde{f}(\alpha )(b-a-\frac{\delta}{2}) +\tilde{f}(\beta ) \cdot \big(\frac{\delta}{2} \big)
-\end{align*}
-Then we can deduce
-\begin{align*}
-\tilde{f}(\alpha )\cdot \big(\frac{\delta}{2} \big)>\tilde{f}(\beta )\cdot \big(\frac{\delta}{2} \big) \tCaC \vdone
-\end{align*}
-\end{proof}
-\begin{theorem}
-\textbf{(Second Mean Value Theorem for Definite Integral)} Given functions $G,\phi :[a,b]\rightarrow \R$ such that 
-\begin{enumerate}[label=(\alph*)]
-  \item $G$ is monotonic
-  \item $\phi$ is Riemann-Integrable
-\end{enumerate}
-Let $G(a^+)=\lim_{t\to a^+}G(t)$ and $G(b^-)=\lim_{t\to b^-}G(t)$. Then there exists $\xi \in (a,b)$ such that 
-\begin{align*}
-\int_a^b G(t)\phi (t)dt= G(a^+)\int_a^{\xi} \phi(t)dt+G(b^-)\int_\xi^{b}\phi (t)dt
-\end{align*}
-\end{theorem}
-\begin{proof}
-Define $f$ on  $[a,b]$ by 
-\begin{align*}
-f(x)=G(a^+)\int_a^x \phi(t)dt+G(b^-)\int_x^b \phi(t)dt
-\end{align*}
-We then reduce the problem into 
-\begin{align*}
-\vi{\text{ finding }\xi \in (a,b)\text{ such that }\int_a^b G(t)\phi (t)dt=f(\xi)}
-\end{align*}
-By \myref{Theorem}{FTC1}, we know $f$ is continuous on  $[a,b]$. Then by IVT, we can reduce the problem into 
-\begin{align*}
-\vi{\text{ finding an interval $[c,d]\subseteq (a,b)$ such that }\int_a^b G(t)\phi (t)}\text{ is between $f(c) $ and $f(d)$ }
-\end{align*}
-
-
-Observe that 
-\begin{align*}
-f(a)=G(b^-)\int_a^b \phi(t)dt\text{ and }f(b)=G(a^+)\int_a^b \phi(t)dt 
-\end{align*}
-
-
-
-
-\end{proof} 
 \chapter{Riemann Calculus}
 \section{Riemann-Stieltjes Integral}
 
@@ -4257,6 +4082,118 @@ Fix $n>N$ and  $x\in [a,b]$. Observe
 &\leq \frac{\epsilon}{2}+\frac{\epsilon}{2}=\epsilon \vdone
 \end{align*}
 \end{proof}
+\section{MVT for Definite Integral}
+\begin{theorem}
+\textbf{(First Mean Value Theorem for Definite Integral)} Given a function $f:[a,b]\rightarrow \R$ such that 
+\begin{enumerate}[label=(\alph*)]
+  \item $f$ is continuous on $(a,b)$
+\end{enumerate}
+There exists $\xi \in (a,b)$ such that 
+\begin{align*}
+\int_a^b f(x)dx = f(\xi)\cdot (b-a)
+\end{align*}
+\end{theorem}
+\begin{proof}
+We wish 
+\begin{align*}
+\vi{\text{ to find  }\xi \in (a,b)\text{ such that }f(\xi)=\frac{\int_a^b f(x)dx}{b-a}}
+\end{align*}
+Define $\tilde{f}:[a,b]\rightarrow \R$ on $[a,b]$ by 
+\begin{align}
+\label{M1}
+\tilde{f}(x)=\begin{cases}
+  f(x)& \text{ if $x \in (a,b)$ }\\
+  \lim_{t\to a}f(t)& \text{ if $x=a$ }\\
+  \lim_{t\to b}f(t)& \text{ if $x=b$ }
+\end{cases}
+\end{align}
+Then, because $\int_a^b f(x)dx=\int_a^b \tilde{f}(x)dx $, we reduce our problem into  
+\begin{align*}
+\vi{\text{ finding $\xi\in(a,b)$ such that $\tilde{f} (\xi)= \frac{\int_a^b \tilde{f}(x)dx }{b-a}$ }}
+\end{align*}
+Because $\tilde{f} $ is continuous on $[a,b]$ by definition \myref{Equation}{M1}, by EVT, we know we there exists $\alpha,\beta  \in [a,b]$ such that 
+\begin{align}
+\label{M4}
+\tilde{f} (\alpha )=\inf_{x \in [a,b]}\tilde{f}(x)\text{ and } \tilde{f}(\beta ) =\sup_{x \in[a,b]}\tilde{f}(x) 
+\end{align}
+WOLG, suppose $\alpha \leq \beta $. Deduce 
+\begin{align*}
+\tilde{f}(\alpha )= \inf_{x \in [a,b]}\tilde{f}(x)\leq \frac{\int_a^b \tilde{f}(x)dx }{b-a} \leq \sup_{x \in [a,b]}\tilde{f}(x) =\tilde{f}(\beta ) 
+\end{align*}
+by IVT, we then know there exists $\xi\in [\alpha ,\beta ]$ such that 
+\begin{align}
+\label{M3}
+\exists \xi\in [\alpha ,\beta ], \tilde{f}(\xi)=\frac{\int_a^b \tilde{f}(x)dx }{b-a} 
+\end{align}
+If $a<\alpha $ and $\beta <b$, our proof is done.\\
+
+
+If not, notice that if $\tilde{f}(\alpha )=\tilde{f}(\beta )$, then by definition of $\alpha ,\beta $ (\myref{Equation}{M4}), the proof is trivial since $\tilde{f}$ is a constant, so we only have to consider when $\tilde{f}(\alpha )<\tilde{f}(\beta )  $, and we wish to show
+\begin{align*}
+\vi{\xi \text{ can not happen at $a$ nor $b$ }}
+\end{align*}
+\As{$\xi=a $, WOLG}. Because $\xi \in [\alpha ,\beta ]$, we know $\alpha =a$. Because $\tilde{f}(\beta )>\tilde{f}(\alpha )  $, we can find $\delta $ such that 
+\begin{align}
+\label{M5}
+\inf_{x \in [\beta  -\delta, \beta  ]}\tilde{f}(x)\geq \frac{\tilde{f}(\alpha )+2\tilde{f}(\beta )  }{3}
+\end{align}
+We then from \myref{Equation}{M3} see that 
+\begin{align}
+\label{M6}
+\int_a^b \tilde{f}(x)dx=\tilde{f}(\xi)(b-a)=\tilde{f}(\alpha ) (b-a)
+\end{align}
+Also, we see from definition of $\alpha $ (\myref{Equation}{M4}) and \myref{Equation}{M5} that 
+\begin{align}
+\int_a^b \tilde{f}(x)dx&=\int_a^{\beta -\delta} \tilde{f}(x)dx + \int_{\beta -\delta}^{\beta  } \tilde{f}(x)dx+\int_{\beta }^{b}\tilde{f}(x)dx \\
+&\geq (b -\delta -a) \tilde{f}(\alpha ) + \delta \cdot  \big( \frac{\tilde{f}(\alpha )+2\tilde{f}(\beta )  }{3}\big)\\
+&> (b -\delta -a) \tilde{f}(\alpha ) + \delta \cdot  \big( \frac{\tilde{f}(\alpha )+\tilde{f}(\beta )  }{2}\big)\\
+&=\tilde{f}(\alpha ) \big(b-a-\frac{\delta}{2} \big) + \tilde{f}(\beta ) \cdot \big( \frac{\delta}{2}\big)
+ \label{M7}
+\end{align}
+Now, from \myref{Equation}{M6} and \myref{Equation}{M7}, we can deduce  
+\begin{align*}
+\tilde{f}(\alpha )(b-a)> \tilde{f}(\alpha )(b-a-\frac{\delta}{2}) +\tilde{f}(\beta ) \cdot \big(\frac{\delta}{2} \big)
+\end{align*}
+Then we can deduce
+\begin{align*}
+\tilde{f}(\alpha )\cdot \big(\frac{\delta}{2} \big)>\tilde{f}(\beta )\cdot \big(\frac{\delta}{2} \big) \tCaC \vdone
+\end{align*}
+\end{proof}
+\begin{theorem}
+\textbf{(Second Mean Value Theorem for Definite Integral)} Given functions $G,\phi :[a,b]\rightarrow \R$ such that 
+\begin{enumerate}[label=(\alph*)]
+  \item $G$ is monotonic
+  \item $\phi$ is Riemann-Integrable
+\end{enumerate}
+Let $G(a^+)=\lim_{t\to a^+}G(t)$ and $G(b^-)=\lim_{t\to b^-}G(t)$. Then there exists $\xi \in (a,b)$ such that 
+\begin{align*}
+\int_a^b G(t)\phi (t)dt= G(a^+)\int_a^{\xi} \phi(t)dt+G(b^-)\int_\xi^{b}\phi (t)dt
+\end{align*}
+\end{theorem}
+\begin{proof}
+Define $f$ on  $[a,b]$ by 
+\begin{align*}
+f(x)=G(a^+)\int_a^x \phi(t)dt+G(b^-)\int_x^b \phi(t)dt
+\end{align*}
+We then reduce the problem into 
+\begin{align*}
+\vi{\text{ finding }\xi \in (a,b)\text{ such that }\int_a^b G(t)\phi (t)dt=f(\xi)}
+\end{align*}
+By \myref{Theorem}{FTC1}, we know $f$ is continuous on  $[a,b]$. Then by IVT, we can reduce the problem into 
+\begin{align*}
+\vi{\text{ finding an interval $[c,d]\subseteq (a,b)$ such that }\int_a^b G(t)\phi (t)}\text{ is between $f(c) $ and $f(d)$ }
+\end{align*}
+
+
+Observe that 
+\begin{align*}
+f(a)=G(b^-)\int_a^b \phi(t)dt\text{ and }f(b)=G(a^+)\int_a^b \phi(t)dt 
+\end{align*}
+
+
+
+
+\end{proof} 
 
 
 \chapter{Complex Analysis}
@@ -5809,87 +5746,21 @@ Define an equivalence relation on $\R^{n+1}\setminus \set{\textbf{0}}$ by
 \begin{align*}
 \textbf{x}\sim \textbf{y}\overset{\triangle}{\iff }\textbf{y}=\ld \textbf{x}\text{ for some $\ld \inr^*$ } 
 \end{align*}
-Let $\RP ^n\triangleq (\R^{n+1}\setminus \set{\textbf{0}})\setminus \sim $ be the quotient space. Also, define an equivalence relation on $S^n\triangleq \set{\textbf{x}\inr^{n+1}:\abso{\textbf{x}}=1}$ by 
-\begin{align*}
-\textbf{x}\sim \textbf{y}\overset{\triangle}{\iff } \textbf{x}=\textbf{y}\text{ or }\textbf{x}=-\textbf{y}
-\end{align*}
-and let $\P^n\triangleq S^n\setminus \sim $ be the quotient space. We denote the quotient map by $q:\S^n\rightarrow \P^n$ and $\pi:\R^{n+1}\setminus \set{\textbf{0}}\rightarrow \R\P^n$. Note that $S^n\subseteq \R^{n+1}\setminus \set{\textbf{0}}$, 
-\end{mdframed}
-\begin{theorem}
-\label{RPnhom}
-\textbf{(Equivalent Definitions of Real Projective Space)} 
-\begin{align*}
-\R\P^n\text{ and }\P^n\text{ are homeomorphic }
-\end{align*}
-\end{theorem}
-\begin{proof}
-Define $\phi:\P^n\rightarrow \R\P^n$ by 
-\begin{align*}
-\set{\textbf{x},-\textbf{x}}\mapsto \set{\ld  \textbf{x}:\ld \inr^*}
-\end{align*}
-It is straightforward to check that $\phi$ is well-defined and bijective.  
-
-
-Observe  
-\begin{enumerate}[label=(\alph*)]
-  \item $\pi|_{\S^n}:\S^n\rightarrow \R\P^n;\pi \circ \textbf{id}$ is continuous 
-  \item $q=\phi^{-1}\circ \pi|_{\S^n}$
-\end{enumerate}
-We first prove 
-\begin{align*}
-  \vi{\phi:\P^n\rightarrow \R\P^n\text{ is continuous }}
-\end{align*}
-Fix open $U\subseteq \R\P^n$. Because $\pi|_{\S^n}$ is continuous, we know 
-\begin{align*}
-\pi|_{\S^n}^{-1}(U)\text{ is open }
-\end{align*}
-We can manually check that 
-\begin{align*}
-\phi^{-1}(U)=q(\pi|_{\S^n}^{-1}(U)) 
-\end{align*}
-Then by definition of quotient map $q$, we see 
-\begin{align*}
-\phi^{-1}(U)=q(\pi|_{\S^n}^{-1} (U))\text{ is open }\vdone
-\end{align*}
-We now prove 
- \begin{align*}
-\blue{\phi:\P^n\rightarrow \R\P^n\text{ is open }}
-\end{align*}
-Fix open $U\subseteq \P^n$. Because of proposition  (a), to show $\phi (U)$ is open, we only have to show
-\begin{align*}
-  \pi|_{\S^n}^{-1}(\phi (U))\text{ is open }
-\end{align*}
-Then see 
-\begin{align*}
-\pi |^{-1}_{\S^n}(\phi (U))= (\phi^{-1}\circ \pi |_{\S^n})(U)=q(U)\text{ is open } \bdone
-\end{align*}
-\end{proof}
-\begin{theorem}
-\label{P^n is Hausdorff}
-\textbf{($P^n$ is Hausdorff)} 
-\begin{align*}
-P^n\text{ is Hausdorff }
-\end{align*}
-\end{theorem}
-\begin{proof}
-
-\end{proof}
-\begin{mdframed}
-Let 
+Let $\RP ^n\triangleq (\R^{n+1}\setminus \set{\textbf{0}})\setminus \sim $ be the quotient space and let  
 \begin{align*}
 V_i\triangleq \set{\textbf{x}\inr^{n+1}:\textbf{x}^i \neq 0}\text{ for each }1\leq i\leq n+1
 \end{align*}
 By definition, it is clear that 
 \begin{align*}
-\text{ either }\bigcup [\textbf{x}]\subseteq V_i\text{ or }\bigcup [\textbf{x}]\subseteq V_i^c
+\text{ either }\pi^{-1}(\pi (\textbf{x}))\subseteq V_i\text{ or }\pi^{-1}(\pi (\textbf{x}))\subseteq V_i^c
 \end{align*}
 Then if we define $\phi_i:V_i\rightarrow \R^n$ by
 \begin{align*}
 \phi_i(\textbf{x})\triangleq \Big(\frac{\textbf{x}^1}{\textbf{x}^i},\dots ,\frac{\textbf{x}^{i-1}}{\textbf{x}^i},\frac{\textbf{x}^{i+1}}{\textbf{x}^i},\dots,\frac{\textbf{x}^{n+1}}{\textbf{x}^i} \Big)
 \end{align*}
-because $\textbf{x}\sim \textbf{y}\text{ and }\textbf{x}\in V_i\implies \phi_i(\textbf{x})=\phi_i(\textbf{y})$, we can well induce a map 
+because $\pi (\textbf{x})=\pi(\textbf{y})\implies \phi_i(\textbf{x})=\phi_i(\textbf{y})$, we can well induce a map 
 \begin{align*}
-\Phi_i:U_i\triangleq \pi (V_i)\subseteq \R P^n\rightarrow \R^n; [\textbf{x}]\mapsto \phi_i(\textbf{x})
+\Phi_i:U_i\triangleq \pi (V_i)\subseteq \R P^n\rightarrow \R^n; \pi (\textbf{x})\mapsto \phi_i(\textbf{x})
 \end{align*}
 Note that one has the equation 
 \begin{align*}
@@ -5964,6 +5835,29 @@ Define $f:(\R^{n+1}\setminus \set{\textbf{0}})^2\rightarrow \R$ by
 f(\textbf{x},\textbf{y})\triangleq \sum_{i\neq j} (\textbf{x}^i\textbf{y}^j-\textbf{x}^j \textbf{y}^i)^2
 \end{align*}
 Note that $f$ is clearly continuous and $f^{-1}(0)=R_\pi$, which finish the proof.
+\end{proof}
+\begin{mdframed}
+Alternatively, we can characterize $\R P^n$ by identifying the antipodal pints on $S^n\triangleq \set{\textbf{x}\inr^{n+1}:\abso{\textbf{x}}=1}$ as one point 
+\begin{align*}
+\textbf{x}\sim \textbf{y}\overset{\triangle}{\iff } \textbf{x}=\textbf{y}\text{ or }\textbf{x}=-\textbf{y}
+\end{align*}
+and let $\P^n\triangleq S^n\setminus \sim $ be the quotient space.
+\end{mdframed}
+\begin{theorem}
+\label{RPnhom}
+\textbf{(Equivalent Definitions of Real Projective Space)} 
+\begin{align*}
+\RP^n\text{ and }\P^n\text{ are homeomorphic }
+\end{align*}
+\end{theorem}
+\begin{proof}
+Define $F:\P^n\rightarrow \RP^n$ by 
+\begin{align*}
+\set{\textbf{x},-\textbf{x}}\mapsto \set{\ld  \textbf{x}:\ld \inr^*}
+\end{align*}
+It is straightforward to check that $F$ is well-defined and bijective.  
+
+
 \end{proof}
 
 \chapter{Beauty}
