--- a/General Analysis/macros.tex
+++ b/General Analysis/macros.tex
@@ -44,3 +44,4 @@
 \newcommand{\dcup}{\mathbin{\dot{\cup}}}
 \newcommand{\diam}[1]{\text{diam}\, #1}
 \newcommand{\at}{\Big|}
+\renewcommand{\phi}{\varphi}
