--- a/HW writing/letterfonts.tex
+++ b/HW writing/letterfonts.tex
@@ -4,4 +4,6 @@
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\Z}{\mathbb{Z}}
-
+\renewcommand{\P}{\mathbb{P}}
+\renewcommand{\S}{\mathbb{S}}
+\newcommand{\RP}{\R P}
